changed height of carousel to 90vh

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -111,7 +111,7 @@
           <div class="slider-mask">
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
@@ -128,7 +128,7 @@
             </div>
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
@@ -145,7 +145,7 @@
             </div>
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
@@ -159,7 +159,7 @@
             </div>
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
@@ -175,7 +175,7 @@
             </div>
             <div class="slide">
               <div class="testimonial-card">
-                <img src="/images/stars.svg" alt="Bewertungssterne" />
+                <img src="/images/Stars.svg" alt="Bewertungssterne" />
                 <p>
                   Man wird sehr herzlich empfangen, der Garten und die beiden
                   Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
