--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -129,7 +129,7 @@
     </p>
     <% } %> <%- include('partials/footer') %>
 
-    <script src="/js/slide.js"></script>
+    <script src="/js/slideIn.js"></script>
     <script src="/js/navToggle.js"></script>
     <script src="/js/reservation.js"></script>
   </body>
