will not create table if not needed

--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -10,7 +10,7 @@
     <div class="loader-overlay">
       <div class="loader">
         <!-- This could be a spinner, logo, or any loading animation -->
-        <p>Loading...</p>
+        <p>Lädt...</p>
       </div>
     </div>
     <div class="pageLoader">
