englischen text gelöscht

--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -98,7 +98,7 @@
                   value="<%= selectedTable.id %>"
                 />
                 <div class="select-date-time">
-                  <h4>Wähle Datum, Zeit und Personenanzahl</h4>
+                  <h4>Wähle Datum, Zeit und Personenanzahl:</h4>
                   <% Object.keys(availableSlots).forEach(date => { %>
                   <div class="date-time-item" style="margin-bottom: 5px">
                     <strong>
@@ -185,7 +185,7 @@
                       </div>
                     </div>
                     <div class="guest-submit">
-                      <div><button type="submit">Reserve</button></div>
+                      <div><button type="submit">Tisch reservieren</button></div>
                     </div>
                   </div>
                 </div>
