changed to 3 timeslots, changed up the date, when updates of db, take place, changed styling of h1 in start

--- a/views/booked.ejs
+++ b/views/booked.ejs
@@ -20,7 +20,7 @@
             year: 'numeric', month: 'short', day: 'numeric' }) %> zwischen
             <%=selectedTime%> Uhr.
           </p>
-          <p>Ich freuen uns auf deinen Besuch <%=user.name%>.</p>
+          <p>Wir freuen uns auf deinen Besuch <%=user.name%>.</p>
           <!-- Button to download calendar event -->
           <button
             id="download-ics"
