--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,7 +22,7 @@
           <h4>Kontakt</h4>
           <a href="">manu@mail.com</a>
           <a href="">030-47488482</a>
-          <a href="">Hauptstraße 155, 13158 Berlin</a>
+          <a href="https://www.google.com/maps/place/Zur+alten+Backstube/@52.6004418,13.3764557,17z/data=!3m2!4b1!5s0x47a8531ccd4a1725:0x31f9cbe5fbe9924a!4m6!3m5!1s0x47a8531ccd23989b:0x973e04aed2f2c372!8m2!3d52.6004386!4d13.3790306!16s%2Fg%2F1tltldh7?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D">Hauptstraße 155, 13158 Berlin</a>
         </div>
       </div>
     </div>
