--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,13 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Parisienne&family=Updock&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="hero">
       <div class="nav-bar-hero"><%- include('partials/header') %></div>
       <div class="container">
         <div class="hero-content">
-          <div><h1 class="hero-heading">ZUR ALTEN BACKSTUBE</h1></div>
+          <div><h1 class="hero-heading">Zur alten Backstube</h1></div>
           <div class="lower-hero">
             <p class="hero-text">
               Das traditionelle Kaffee im Herzen von Rosenthal. Ofenfrischer
@@ -23,7 +24,7 @@
               dich!
             </p>
             <a href="/reservation" class="reservation-button"
-              >Tisch Reservierung</a
+              >Tischreservierung</a
             >
           </div>
         </div>
@@ -93,7 +94,7 @@
             </p>
             <div class="contant-buttons">
               <a href="/reservation" class="reservation-button"
-                >Tisch Reservierung</a
+                >Tischreservierung</a
               >
               <a href="/blog" class="blog-button">Veranstaltungen</a>
             </div>
