--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,7 +26,7 @@ rel="stylesheet"
         <a href="/login">Log-In</a>
         <a href="/register">Registrierung</a>
         <%}%>
-        <a href="/blog">Blog</a>
+        <a href="/blog">Veranstaltungen</a>
         <a href="/reservation" class="reserve-button">Reservierung</a>
       </div>
     </div>
