Styled homepage and changed images for Table reservation and removed slider from Homepage, added 3 time slots and changed the termin.ics

--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -28,7 +28,7 @@
             <div class="list">
               <% tables.forEach(table => { %>
               <div class="item">
-                <img src="/images/table<%= table.id%>.png" alt="Tabel image" />
+                <img src="/images/table<%= table.id%>.webp" alt="Tabel image" />
                 <div class="content">
                   <div class="tablename"><%= table.roomname %></div>
                   <div class="title"><%= table.places %> Sitzplätze</div>
@@ -53,7 +53,7 @@
             <div class="thumbnail">
               <% tables.forEach(table => { %>
               <div class="item">
-                <img src="/images/table<%= table.id%>.png" alt="Tabel image" />
+                <img src="/images/table<%= table.id%>.webp" alt="Tabel image" />
                 <div class="content">
                   <div class="tablename"><%= table.tablename %></div>
                   <div class="des"><%= table.places%> Sitzplätze</div>
@@ -77,7 +77,7 @@
           <div class="selected-table-container">
             <div class="selected-table-content-container">
               <img
-                src="/images/table<%= selectedTable.id%>.png"
+                src="/images/table<%= selectedTable.id%>.webp"
                 alt="Tisch Bild"
               />
               <div class="selected-table-content">
