--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
   --main-bg-color: #fff0dc;
   --main-box-color: #f0bb78;
   --main-box-color-blur: #f0bd7a66;
+  --main-box-color-blur-2: #f0bd7ac5;
   --main-button-color: #131010;
   --secondary-button-color: #543a14;
   --main-text-color: #495057;
@@ -83,18 +84,25 @@ p {
       hsla(0, 0%, 0%, 0.5),
       hsla(0, 0%, 0%, 0.1)
     ),
-    url(/images/2024-11-08.jpg);
+    url(/images/landingimage.WEBP);
   background-position: 71% 50%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   padding: 0 60px;
+  margin-bottom: 60px;
   overflow: hidden;
+  position: relative;
 }
 
 .hero-heading,
 .hero-text {
   color: var(--main-bg-color) !important;
+}
+
+.p-hero {
+  position: absolute;
+  bottom: 5px;
 }
 
 .hero-content {
@@ -380,7 +388,6 @@ p {
   text-align: center;
 }
 
-
 .post-image {
   max-width: 80%;
   max-height: 400px;
@@ -572,7 +579,7 @@ p {
   transform: translateY(50px);
   filter: blur(20px);
   opacity: 0;
-  animation: showContent 0.5s 1s linear 1 forwards;
+  animation: showContent 0.5s 0s linear 1 forwards;
 }
 @keyframes showContent {
   to {
@@ -582,16 +589,16 @@ p {
   }
 }
 .carousel .list .item:nth-child(1) .content .title {
-  animation-delay: 1s !important;
+  animation-delay: 0.5s !important;
 }
 .carousel .list .item:nth-child(1) .content .topic {
-  animation-delay: 1.2s !important;
+  animation-delay: 0.6s !important;
 }
 .carousel .list .item:nth-child(1) .content .des {
-  animation-delay: 1.4s !important;
+  animation-delay: 0.7s !important;
 }
 .carousel .list .item:nth-child(1) .content .buttons {
-  animation-delay: 1.6s !important;
+  animation-delay: 0.8s !important;
 }
 /* create animation when next click */
 .carousel.next .list .item:nth-child(1) img {
@@ -791,23 +798,22 @@ p {
   margin-top: 5px;
 }
 
-
-
-.date-time-item, .name-mail-guest{
+.date-time-item,
+.name-mail-guest {
   background: var(--main-box-color);
   backdrop-filter: blur(10px);
   border-radius: 8px;
   padding: 2px;
 }
 
-.slot-grid{
+.slot-grid {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: 10px;
   padding: 10px;
 }
 
-.slot-item label{
+.slot-item label {
   display: flex;
   flex-direction: column;
   background-color: var(--main-bg-color);
@@ -828,7 +834,7 @@ input[type="radio"]:checked + .radio-label {
   border-color: var(--main-bg-color);
 }
 
-.user-data{
+.user-data {
   grid-column: span 2;
   background: none !important;
   display: grid;
@@ -837,17 +843,17 @@ input[type="radio"]:checked + .radio-label {
   gap: 10px;
 }
 
-.name-mail-guest div{
+.name-mail-guest div {
   padding: 5px 0;
   text-align: start;
 }
 
-.guest-submit{
+.guest-submit {
   align-content: center;
   background: none;
 }
 
-.guest-submit button{
+.guest-submit button {
   background: var(--main-button-color);
   color: var(--main-bg-color);
   padding: 10px;
@@ -858,14 +864,14 @@ input[type="radio"]:checked + .radio-label {
   transition: all 0.5s ease;
 }
 
-.guest-submit button:hover{
+.guest-submit button:hover {
   background: var(--main-box-color);
   color: var(--main-button-color);
 }
 
 /*booked.ejs*/
 
-.booked{
+.booked {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -874,7 +880,7 @@ input[type="radio"]:checked + .radio-label {
   gap: 20px;
 }
 
-.booked button{
+.booked button {
   background: var(--main-button-color);
   color: var(--main-bg-color);
   padding: 10px;
@@ -885,11 +891,10 @@ input[type="radio"]:checked + .radio-label {
   transition: all 0.5s ease;
 }
 
-.booked button:hover{
+.booked button:hover {
   background: var(--main-box-color);
   color: var(--main-button-color);
 }
-
 
 /* Content for Slide in Animation */
 .flex_einfliegen {
@@ -1006,11 +1011,16 @@ input[type="radio"]:checked + .radio-label {
   }
 
   h1 {
-    font-size: 3rem;
+    font-size: 3.5rem;
+    margin-top: 10px;
   }
 
-  h2{
+  h2 {
     font-size: 2.5rem;
+  }
+
+  .hero {
+    background-position: 34% 50%;
   }
 
   .flex_einfliegen > button {
@@ -1060,12 +1070,16 @@ input[type="radio"]:checked + .radio-label {
 
   .first-row {
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
   }
 
   .end-footer {
     flex-direction: row;
     flex-wrap: wrap;
+  }
+
+  .flex-row {
+    flex-direction: column;
   }
 
   .flex-footer {
@@ -1110,8 +1124,6 @@ input[type="radio"]:checked + .radio-label {
     padding: 0 20px;
   }
 }
-
-
 
 /* Page Loader */
 /* Prevent scrolling while loading */
@@ -1171,7 +1183,7 @@ body.loading {
   .links {
     display: flex; /* Keep it as flex so that children layout correctly */
     flex-direction: column;
-    background: #444;
+    background: var(--main-box-color-blur-2);
     position: absolute;
     top: 100%;
     right: 0;
@@ -1199,14 +1211,14 @@ body.loading {
     border-bottom: 1px solid #555;
   }
 
-  .selected-table-container{
+  .selected-table-container {
     height: auto;
   }
 
   .reservation-container {
     padding: 0 20px;
   }
-  .hero{
+  .hero {
     padding: 0 20px;
   }
 }
