--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Parisienne&family=Updock&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Noto+Sans+JP:wght@100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Parisienne&family=Updock&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="hero">
@@ -18,11 +21,8 @@
         <div class="hero-content">
           <div><h1 class="hero-heading">Zur alten Backstube</h1></div>
           <div class="lower-hero">
-            <p class="hero-text">
-              Das traditionelle Kaffee im Herzen von Rosenthal. Ofenfrischer
-              Kuchen, leckerer Kaffe und eine gemütliche Atmosphäre erwarten
-              dich!
-            </p>
+            <p class="hero-text p-hero">Seit 1863</p>
+            <h3 class="hero-text">Familie Ziekow in 5. Generation</h3>
             <a href="/reservation" class="reservation-button"
               >Tischreservierung</a
             >
@@ -105,112 +105,8 @@
         </div>
       </div>
     </div>
-    <div class="section-testimonial overflow-hidden padding-tb-20-60">
-      <div class="container">
-        <h2 class="testimonial-heading">Was meine Gäste sagen:</h2>
-        <div class="testimonial-slider">
-          <div class="slider-mask">
-            <div class="slide">
-              <div class="testimonial-card">
-                <img src="/images/Stars.svg" alt="Bewertungssterne" />
-                <p>
-                  Man wird sehr herzlich empfangen, der Garten und die beiden
-                  Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
-                  zu Hause. Und mit liebevoller Gastfreundlichkeit wird man von
-                  Vater und Sohn bewirtet. Der selbst gebackene Kuchen schmeckt
-                  einmalig! Macht weiter so! Ich freue mich,die alte Backstube
-                  entdeckt zu haben!
-                </p>
-                <div class="author-block">
-                  <p>Pe Truschka</p>
-                  <p>10.2024</p>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="testimonial-card">
-                <img src="/images/Stars.svg" alt="Bewertungssterne" />
-                <p>
-                  Man wird sehr herzlich empfangen, der Garten und die beiden
-                  Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
-                  zu Hause. Und mit liebevoller Gastfreundlichkeit wird man von
-                  Vater und Sohn bewirtet. Der selbst gebackene Kuchen schmeckt
-                  einmalig! Macht weiter so! Ich freue mich,die alte Backstube
-                  entdeckt zu haben!
-                </p>
-                <div class="author-block">
-                  <p>Pe Truschka</p>
-                  <p>10.2024</p>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="testimonial-card">
-                <img src="/images/Stars.svg" alt="Bewertungssterne" />
-                <p>
-                  Man wird sehr herzlich empfangen, der Garten und die beiden
-                  Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
-                  zu Hause.
-                </p>
-                <div class="author-block">
-                  <p>Pe Truschka</p>
-                  <p>10.2024</p>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="testimonial-card">
-                <img src="/images/Stars.svg" alt="Bewertungssterne" />
-                <p>
-                  Man wird sehr herzlich empfangen, der Garten und die beiden
-                  Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
-                  zu Hause. Und mit liebevoller Gastfreundlichkeit wird man von
-                  Vater und Sohn bewirtet. Der selbst gebackene Kuchen schmeckt
-                  einmalig! Macht weiter so!
-                </p>
-                <div class="author-block">
-                  <p>Pe Truschka</p>
-                  <p>10.2024</p>
-                </div>
-              </div>
-            </div>
-            <div class="slide">
-              <div class="testimonial-card">
-                <img src="/images/Stars.svg" alt="Bewertungssterne" />
-                <p>
-                  Man wird sehr herzlich empfangen, der Garten und die beiden
-                  Gaststuben vermitteln den Eindruck,man besucht liebe Freunde
-                  zu Hause. Und mit liebevoller Gastfreundlichkeit wird man von
-                  Vater und Sohn bewirtet. Der selbst gebackene Kuchen schmeckt
-                  einmalig!
-                </p>
-                <div class="author-block">
-                  <p>Pe Truschka</p>
-                  <p>10.2024</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="arrow-left" id="prev">
-            <img
-              src="https://cdn.prod.website-files.com/678cb846ec8afcb96aeea333/678d1e91e52f8ef00fb66b91_arrow_back_24px.svg"
-              loading="lazy"
-              alt="Pfeil nach links"
-            />
-          </div>
-          <div class="arrow-right" id="next">
-            <img
-              src="https://cdn.prod.website-files.com/678cb846ec8afcb96aeea333/678d1e3bba0255383d97592a_arrow_forward_24px.svg"
-              loading="lazy"
-              alt="Pfeil nach rechts"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
     <%- include('partials/footer') %>
     <script src="/js/slideIn.js"></script>
     <script src="/js/navToggle.js"></script>
-    <script src="/js/slider-animation.js"></script>
   </body>
 </html>
