--- a/views/reservation.ejs
+++ b/views/reservation.ejs
@@ -18,6 +18,8 @@
         <%- include('partials/header') %>
         <div class="container">
           <h1 class="page-header">Tisch Reservierung</h1>
+          <p>Hier hast du die Möglichkeit deinen Tisch zu reservieren. Neue Termine werden immer Samstags um 08:00 Uhr freigeschaltet.</p>
+          <p>Falls kein Tisch mehr verfügbar ist, melde dich gerne telefonisch bei mir <a href="tel:0304788482">030-47488482</a>. Wir finden eine Lösung</p>
         </div>
       </div>
       <% if (!selectedTable) { %>
