--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,9 @@ rel="stylesheet"
         <a href="/"> <%= user.isAdmin ? 'Admin' : '' %> </a>
         <a href="/allReservations">Alle Reservierungen</a>
         <a href="/newBlog">Neuer Blog</a>
+        <a href="/logout">Log-Out</a>
         <% } %>
+        <a href="/geschichte">Geschichte</a>
         <a href="/blog">Veranstaltungen</a>
         <a href="/reservation" class="reserve-button">Reservierung</a>
       </div>
