--- a/public/styles.css
+++ b/public/styles.css
@@ -198,6 +198,7 @@ p {
 .contant-buttons {
   display: flex;
   font-size: 15px;
+  margin-bottom: 60px;
 }
 
 .nav-bar-hero a {
@@ -873,7 +874,6 @@ input[type="radio"]:checked + .radio-label {
 }
 
 /*booked.ejs*/
-
 .booked {
   display: flex;
   flex-direction: column;
@@ -1003,6 +1003,29 @@ input[type="radio"]:checked + .radio-label {
   text-decoration: underline;
 }
 
+/* New Blog */
+
+.newBlog {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+
+  margin: 60px 0;
+}
+
+.newBlog textarea{
+  width: 100%;
+  height: 400px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
 @media (max-width: 950px) {
   .flex_einfliegen,
   .flex_einfliegen:nth-child(odd) {
@@ -1040,7 +1063,7 @@ input[type="radio"]:checked + .radio-label {
   }
 
   .flex-reverse {
-    flex-direction: column-reverse;
+    flex-direction: column-reverse !important;
   }
 
   .img-left {
@@ -1125,6 +1148,14 @@ input[type="radio"]:checked + .radio-label {
   }
   .section {
     padding: 0 20px;
+  }
+  .split-area {
+    margin: 20px 0;
+    flex-direction: column;
+  }
+
+  .vertical-image {
+    height: 260px !important;
   }
 }
 
