--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -66,9 +66,9 @@
       >
         <% if (user.isAdmin) { %>
         <form action="/blog/<%= post.id%>/delete" method="post">
-          <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+          <button type="submit" class="btn btn-danger btn-sm">Löschen</button>
         </form>
-        <a href="/blog/<%= post.id%>/edit">Edit Post</a>
+        <a href="/blog/<%= post.id%>/edit">Bearbeiten</a>
         <% } %>
 
         <!-- The image is loaded via the /image/:id route -->
