--- a/views/newBlog.ejs
+++ b/views/newBlog.ejs
@@ -1,33 +1,53 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Neuer Blog-Post</title>
-  <link rel="stylesheet" href="/styles.css" />
-</head>
-<body>
-  <%- include('partials/header') %>
-  <div class="container">
-    <h1>Neuer Blog-Post</h1>
-    <form action="/newBlog" method="POST" enctype="multipart/form-data">
-      <div class="form-group">
-        <label for="heading">Titel:</label>
-        <input type="text" name="heading" id="heading" required />
-        
-        <label for="text">Text:</label>
-        <textarea name="text" id="text" rows="6" required></textarea>
-        
-        <label for="mainImage">Hauptbild (JPG/PNG, wird zu WebP konvertiert):</label>
-        <input type="file" name="mainImage" id="mainImage" accept="image/jpeg, image/png" required />
-        
-        <label for="extraImages">Extra Bilder (max. 5, JPG/PNG, werden zu WebP konvertiert):</label>
-        <input type="file" name="extraImages" id="extraImages" accept="image/jpeg, image/png" multiple />
-        
-        <button type="submit">Post erstellen</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Neuer Blog-Post</title>
+    <link rel="stylesheet" href="/styles.css" />
+  </head>
+  <body>
+    <div class="section">
+      <%- include('partials/header') %>
+      <div class="container">
+        <h1 class="center">Neuer Blog</h1>
+        <form action="/newBlog" method="POST" enctype="multipart/form-data">
+          <div class="newBlog">
+            <label for="heading">Titel:</label>
+            <input type="text" name="heading" id="heading" required />
+
+            <label for="text">Text:</label>
+            <textarea
+              class="newBlog-Text"
+              name="text"
+              id="text"
+              rows="6"
+              required
+            ></textarea>
+
+            <label for="mainImage">Hauptbild (JPG/PNG):</label>
+            <input
+              type="file"
+              name="mainImage"
+              id="mainImage"
+              accept="image/jpeg, image/png"
+              required
+            />
+
+            <label for="extraImages">Extra Bilder (max. 5, JPG/PNG):</label>
+            <input
+              type="file"
+              name="extraImages"
+              id="extraImages"
+              accept="image/jpeg, image/png"
+              multiple
+            />
+
+            <button type="submit">Post erstellen</button>
+          </div>
+        </form>
       </div>
-    </form>
-  </div>
-  <%- include('partials/footer') %>
-</body>
+    </div>
+    <%- include('partials/footer') %>
+  </body>
 </html>
