--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,41 +1,46 @@
-  <div class="flex-footer">
-    <div class="first-row">
-      <div class="left-footer">
-        <div>
-          <h4>LOGO</h4>
-          <p>Webseite meines Kaffees in Rosenthal - Berlin</p>
-        </div>
-      </div>
-      <div class="right-footer">
-        <div>
-          <h4>Unternehmen</h4>
-          <a>Über Uns</a>
-          <a>Kontakt</a>
-        </div>
-        <div>
-          <h4>Funktionen</h4>
-          <a href="/reservation">Tisch Reservierung</a>
-          <a href="/event">Event Buchung</a>
-          <a href="/blog">Veranstaltungen</a>
-        </div>
-        <div>
-          <h4>Kontakt</h4>
-          <a href="mailto:info@zuraltenbackstube.de">info@zuraltenbackstube.de</a>
-          <a href="tel:03047488482">030-47488482</a>
-          <a href="https://www.google.com/maps/place/Zur+alten+Backstube/@52.6004418,13.3764557,17z/data=!3m2!4b1!5s0x47a8531ccd4a1725:0x31f9cbe5fbe9924a!4m6!3m5!1s0x47a8531ccd23989b:0x973e04aed2f2c372!8m2!3d52.6004386!4d13.3790306!16s%2Fg%2F1tltldh7?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D">Hauptstraße 155, 13158 Berlin</a>
-        </div>
+<div class="flex-footer">
+  <div class="first-row">
+    <div class="left-footer">
+      <div>
+        <h4>LOGO</h4>
+        <p>Webseite meines Kaffees in Rosenthal - Berlin</p>
       </div>
     </div>
-    <div class="second-row">
-      <div class="flex-row">
-        <div>
-            <p>© Zur alten Backstube 2025</p>
-        </div>
-        <div class="right-footer end-footer">
-            <a href="/impressum">Impressum</a>
-            <a href="/datenschutz">Datenschutz</a>
-            <a href="/agb">AGB</a>
-        </div>
+    <div class="right-footer">
+      <div>
+        <h4>Unternehmen</h4>
+        <a>Über Uns</a>
+        <a>Kontakt</a>
+      </div>
+      <div>
+        <h4>Funktionen</h4>
+        <a href="/reservation">Tisch Reservierung</a>
+        <a href="/event">Event Buchung</a>
+        <a href="/blog">Veranstaltungen</a>
+      </div>
+      <div>
+        <h4>Kontakt</h4>
+        <a href="mailto:info@zuraltenbackstube.de">info@zuraltenbackstube.de</a>
+        <a href="tel:03047488482">030-47488482</a>
+        <a
+          href="https://www.google.com/maps/place/Zur+alten+Backstube/@52.6004418,13.3764557,17z/data=!3m2!4b1!5s0x47a8531ccd4a1725:0x31f9cbe5fbe9924a!4m6!3m5!1s0x47a8531ccd23989b:0x973e04aed2f2c372!8m2!3d52.6004386!4d13.3790306!16s%2Fg%2F1tltldh7?entry=ttu&g_ep=EgoyMDI1MDIxOS4xIKXMDSoASAFQAw%3D%3D"
+          >Hauptstraße 155, 13158 Berlin</a
+        >
       </div>
     </div>
   </div>
+  <div class="second-row">
+    <div class="flex-row">
+      <div>
+        <p>© Zur alten Backstube 2025</p>
+      </div>
+      <div class="right-footer end-footer">
+        <a href="/impressum">Impressum</a>
+        <a href="/datenschutz">Datenschutz</a>
+        <a href="/agb">AGB</a>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="/js/slideIn.js"></script>
+<script src="/js/navToggle.js"></script>
