login wurde angepasst für mobil view, komplett neu die Seite für eventbuchung und angefragt und dazugehörige style, header wurde eventbuchung hinzugefügt

--- a/views/booked.ejs
+++ b/views/booked.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tisch Reservierung</title>
+    <title>Tisch reserviert</title>
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
@@ -33,9 +33,7 @@
         </div>
       </div>
     </div>
-    <script src="/js/slide.js"></script>
-    <script src="/js/navToggle.js"></script>
+    <%- include('partials/footer') %>
     <script src="/js/downloadICS.js"></script>
-    <script></script>
   </body>
 </html>
