--- a/public/styles.css
+++ b/public/styles.css
@@ -1015,7 +1015,7 @@ input[type="radio"]:checked + .radio-label {
   margin: 60px 0;
 }
 
-.newBlog textarea{
+.newBlog textarea {
   width: 100%;
   height: 400px;
   padding: 12px 20px;
@@ -1025,6 +1025,123 @@ input[type="radio"]:checked + .radio-label {
   background-color: #f8f8f8;
   resize: none;
 }
+
+.logIn-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 60px;
+}
+
+.logIn-form label {
+  display: block;
+}
+
+/* eventbuchung.ejs */
+.eventbuchung-form label:not(.radio-event) {
+  display: block;
+}
+
+.eventbuchung-form{
+  background: var(--main-box-color-blur);
+  padding-bottom: 10px;
+  margin-bottom: 60px;
+}
+
+.eventbuchung-textarea textarea {
+  width: 100%;
+  height: 200px;
+  border-radius: 5px;
+  margin: 5px 0px 20px 0px;
+  padding: 0px;
+}
+
+.eventbuchung-radio {
+  margin: 10px 0;
+}
+
+.radio-item {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.radio-event:last-child{
+  grid-column: span 2;
+}
+
+.span2{
+  grid-column: span 2;
+}
+
+.radio-event {
+  height: 25px;
+  background: var(--secondary-button-color);
+  color: var(--main-box-color);
+  border-radius: 8px;
+  padding: 5px;
+  transition: all 0.5s ease;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.radio-event:hover {
+  background: var(--main-box-color);
+  color: var(--secondary-button-color);
+  transform: translateY(-2px);
+
+}
+
+input[type="radio"]:checked + .radio-event {
+  background: var(--selected-radio-color);
+}
+
+.eventbuchung-email input{
+  width: 326px;
+}
+
+.flex-name-tel{
+  display: flex;
+  justify-content: flex-start;
+  gap: 40px;
+}
+
+.input-fields-grid{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.event-button {
+  background-color: var(--main-button-color);
+  color: var(--main-bg-color);
+  border: none;
+  padding: 12px 24px;
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.1s ease, box-shadow 0.3s ease;
+  display: block;
+  margin: 30px auto;
+}
+
+.event-button:hover {
+  background-color: var(--secondary-button-color);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px var(--main-box-color-blur);
+}
+
+.event-button:active {
+  transform: translateY(1px);
+  box-shadow: 0 2px 4px var(--main-box-color-blur-2);
+}
+
 
 @media (max-width: 950px) {
   .flex_einfliegen,
