--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,7 @@ rel="stylesheet"
         <a href="/newBlog">Neuer Blog</a>
         <a href="/logout">Log-Out</a>
         <% } %>
+        <a href="/eventbuchung">Feier buchen</a>
         <a href="/geschichte">Geschichte</a>
         <a href="/blog">Veranstaltungen</a>
         <a href="/reservation" class="reserve-button">Reservierung</a>
